--- a/src/frontend/devops-nav/src/index.html
+++ b/src/frontend/devops-nav/src/index.html
@@ -152,8 +152,9 @@
         }
         
         window.setProjectIdCookie = function (projectId) {
-          const topDomain = document.domain.split('.').slice(-2).join('.')
             try {
+                var domainMatch = location.hostname.match(/([^.]+\.)?([^\.]+\..+)/)
+                var topDomain = domainMatch.length > 2 ? domainMatch[2] : location.hostname
                 if (projectId) {
                     setCookie(X_DEVOPS_PROJECT_ID, projectId, topDomain)
                     window.GLOBAL_PID = projectId
